<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home_selector"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_nav_search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_ai"
        android:icon="@drawable/ic_nav_ai_selector"
        android:title="@string/nav_ai" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_nav_notifications_selector"
        android:title="@string/nav_notifications" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_nav_chat_selector"
        android:title="@string/nav_chat" />
</menu>
